# dns-lookup-service

./: .gitignore  Cargo.toml  README.md
docker/: setup_everything.sh
docker/dns-lookup-service/: Dockerfile  run-file.sh
examples/: sample-config.toml  sample-log4rs.yaml
scripts/: setup_run.sh
src/: config.rs  lookup.rs  main.rs  webserver.rs
