[package]
name = "dns-lookup-service"
version = "0.1.0"
authors = ["Adam Pridgen <adam.pridgen@thecoverofnight.com>"]

[dependencies]
iron = "*"
trust-dns = "^0.13"
argparse = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
router = "*"
toml = "0.4"

hyper = "0.11"
futures = "0.1"
mime = "0.3"
gotham = "0.2"
